--- a/css/custom.css
+++ b/css/custom.css
@@ -22,19 +22,29 @@ div{
     background: darkslategray;
     border-radius: 2px;
   }
+
 /* Custom display on Smartphones */
 @media screen and (max-width: 767px) {
     .slide-container{
-        scroll-snap-type: x mandatory;
+        width: 100%;
+        height: 500px;
     }
-    .slides{
-        scroll-snap-align: start;
+    .slide-container img{
+        width: 100%;
+        height: 500px;
     }
 }
 
 /* Custom display on Tablets */
 @media screen and (min-width: 767px) and (max-width: 1023px) {
-    
+    .slide-container{
+        width: 100%;
+        height: 500px;
+    }
+    .slide-container img{
+        width: 100%;
+        height: 500px;
+    }
 }
 
 /* Custom display on Desktop */
@@ -47,10 +57,4 @@ div{
         width: 100%;
         height: 500px;
     }
-    .slide-container{
-        scroll-snap-type: x mandatory;
-    }
-    .slides{
-        scroll-snap-align: start;
-    }   
 }
