--- a/css/custom.css
+++ b/css/custom.css
@@ -29,6 +29,12 @@ div{
         width: 100%;
         height: 300px;
     }
+    .slide-container .display{
+        padding: 5%;
+    }
+    .slide-container h2{
+        font-weight: 900;
+    }
 }
 
 /* Custom display on Tablets */
@@ -37,6 +43,12 @@ div{
         width: 100%;
         height: 400px;
     }
+    .slide-container .display{
+        padding: 5%;
+    }
+    .slide-container h2{
+        font-weight: 900;
+    }
 }
 
 /* Custom display on Desktop */
@@ -44,5 +56,11 @@ div{
     .slide-container img{
         width: 100%;
         height: 500px;
+    }
+    .slide-container .display{
+        padding: 5%;
+    }
+    .slide-container h2{
+        font-weight: 900;
     }
 }
