--- a/css/custom.css
+++ b/css/custom.css
@@ -36,6 +36,9 @@ div{
         font-weight: 900;
         font-size: large;
     }
+    .slide-container button{
+        font-size: x-small;
+    }
     /* About */
     #about {
         width: 100%;
@@ -46,7 +49,7 @@ div{
         margin: auto;
         background-color: chocolate;
     }
-    .smartphone_half{
+    .about .smartphone_half{
         width: 100%;
         padding: 15px;
     }
@@ -71,6 +74,18 @@ div{
         margin-left: 70%;
         font-size: x-small;
     }
+    /* Services */
+    .services h1{
+        font-size: x-small;
+    }
+    .services p{
+        font-size: xx-small;
+        padding: 6px;
+        text-align: center;
+    }
+    .services img{
+        width: 50%;
+    }
 }
 
 /* Custom display on Tablets */
@@ -85,6 +100,9 @@ div{
     .slide-container h2{
         font-weight: 900;
         font-size: larger;
+    }
+    .slide-container button{
+        font-size: small;
     }
     /* About */
     #about {
@@ -121,6 +139,30 @@ div{
         margin-left: 70%;
         font-size: small;
     }
+    /* Services */
+    .custom_tab{
+        width: 50%;
+    }
+    .services p{
+        font-size: medium;
+        padding: 6px;
+        text-align: center;
+    }
+    .services img{
+        width: 100%;
+        height: 200px;
+    }
+    .services h5{
+        text-align: center;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-weight: 600;
+        color: darkslategrey;
+    }
+    .desktop_width p{
+        font-size: small;
+        text-align: center;
+        margin: 4%;
+    }
 }
 
 /* Custom display on Desktop */
@@ -134,6 +176,9 @@ div{
     }
     .slide-container h2{
         font-weight: 900;
+    }
+    .slide-container button{
+        font-size: large;
     }
     /* About */
     #about {
@@ -152,5 +197,26 @@ div{
     .about h4{
         font-family: 'Caprasimo', cursive;
         color: darkslategray;
+    }
+    /* Services */
+    .services p{
+        font-size: medium;
+        padding: 6px;
+        text-align: center;
+    }
+    .services img{
+        width: 100%;
+        height: 200px;
+    }
+    .services h5{
+        text-align: center;
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-weight: 600;
+        color: darkslategrey;
+    }
+    .desktop_width p{
+        font-size: small;
+        text-align: center;
+        margin: 4%;
     }
 }
