--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,12 @@
 * {
     box-sizing: border-box;
     scroll-behavior: smooth;
+    margin: 0;
 }
 div{
     margin: 0;
 }
-
+/* GENERAL */
 /* Customize the scrollbar */
 ::-webkit-scrollbar {
     width: 8px;
@@ -22,7 +23,13 @@ div{
     background: darkslategray;
     border-radius: 2px;
   }
-
+ footer h4 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+ }
+ footer section a {
+    text-decoration: none;
+    font-weight: 700;
+ }
 /* Custom display on Smartphones */
 @media screen and (max-width: 767px) {
     .slide-container img{
@@ -97,6 +104,15 @@ div{
         font-size: small;
         text-align: center;
         margin: 4%;
+    }
+    h1 {
+        font-size: 25px;
+    }
+    p {
+        font-size: 20px;
+    }
+    .who-box p {
+        font-size: 13px;
     }
 }
 
