--- a/css/custom.css
+++ b/css/custom.css
@@ -82,11 +82,8 @@ div{
         font-size: x-small;
     }
     /* Services */
-    .services h1{
-        font-size: small;
-    }
     .services p{
-        font-size: xx-small;
+        font-size: small;
         padding: 8px;
         text-align: center;
     }
@@ -120,9 +117,21 @@ div{
     .w3-mobile p {
         font-size: 13px;
     }
+    .contact-box-small-2 {
+        padding: 0 !important;
+    }
+    .contact-box-small-2 h1 {
+        font-size: 20px;
+    }
+    .contact-box-left {
+        border-radius: 16px 16px 0 0;
+    }
+    .contact-box-img {
+        border-radius:  0 0 16px 16px;
+    }
 }
 
-/* Custom display on Tablets */
+/* Custom display on medium screens */
 @media screen and (min-width: 767px) and (max-width: 1023px) {
     .slide-container img{
         width: 100%;
@@ -200,9 +209,23 @@ div{
         text-align: center;
         margin: 4%;
     }
+    .contact-box-small {
+        padding-top: 0 !important;
+        padding-bottom: 0 !important;
+    }
+    .contact-box-small-2 {
+        padding-top: 32px !important;
+        padding-bottom: 32px !important;
+    }
+    .contact-box-left {
+        border-radius: 32px 32px 0 0;
+    }
+    .contact-box-img {
+        border-radius:  0 0 32px 32px;
+    }
 }
 
-/* Custom display on Desktop */
+/* Custom display on large screens */
 @media screen and (min-width: 1023px) {
     .slide-container img{
         width: 100%;
@@ -238,7 +261,7 @@ div{
     /* Services */
     .services p{
         font-size: medium;
-        padding: 6px;
+        padding: 4px;
         text-align: center;
     }
     .services img{
@@ -255,5 +278,19 @@ div{
         font-size: small;
         text-align: center;
         margin: 4%;
+    }
+    .contact-box-small {
+        padding-top: 64px !important;
+        padding-bottom: 64px !important;
+    }
+    .contact-box-small-2 {
+        padding-top: 64px !important;
+        padding-bottom: 64px !important;
+    }
+    .contact-box-left {
+        border-radius: 32px 0 0 32px;
+    }
+    .contact-box-img {
+        border-radius: 0 32px 32px 0;
     }
 }
